# ExoJointData

./: README.md
ExoJointData_client/: CMakeLists.txt  README.md  README~
ExoJointData_client/include/: exoJointData_auxFunction.h  exoJointData_global.h  exoJointData_global.h~  exoJointData_thread.h
ExoJointData_client/src/: exoJointData_auxFunction.c  exoJointData_client.c  exoJointData_client.c~  exoJointData_threadPkgSend.c  exoJointData_threadStopFunc.c
ExoJointData_server/: CMakeLists.txt  CONFIGURATION.txt  README.md  README~
ExoJointData_server/include/: exoJointData_auxFunction.h  exoJointData_auxFunction.h~  exoJointData_global.h  exoJointData_thread.h
ExoJointData_server/src/: exoJointData_auxFunction.c  exoJointData_server.c  exoJointData_server.c~  exoJointData_threadPkgRecv.c  exoJointData_threadPkgRecv.c~  exoJointData_threadPkgSave.c  exoJointData_threadPrint2Bash.c  exoJointData_threadStopFunc.c
